--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <main>
-        <h1>Welcome to My Website</h1>
+        <h1>Hallo ik ben niek</h1>
         <img src="./lol.jpg" alt="lol">
     </main>
 </body>
